--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="assets/css/materialdesignicons.min.css">
     <script src="assets/js/vue.js"></script>
     <script src="assets/js/vuetify.js"></script>
-    <script src="assets/js/sweetalert2.min.js"></script>
+    <script src="assets/js/sweetalert2.all.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/component/includeHtml.js"></script>
+    <!-- <script src="assets/component/includeHtml.js"></script> -->
     <script src="assets/js/copyClipboard.js"></script>
     <style>
         body {
@@ -107,7 +107,7 @@
 </body>
 
 <script src="assets/js/axios.min.js"></script>
-<script src="assets/component/component.js"></script>
+<!-- <script src="assets/component/component.js"></script> -->
 <!-- <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-database.js"></script> -->
